@startuml builderclasses

title "Diagramme de Classes - Patron Builder"


class SystemeDossier{
    -Creer():Dossier
}

Interface Builder{
    - creerVisites():List<Visites>
    - creerAntecedent():List<Antecedent>
    - retourDossier(): Dossier
}

class ConnecteurDB{
    - creerVisites():List<Visites>
    - creerAntecedent():List<Antecedent>
    - retourDossier(): Dossier
}

class Dossier{}

SystemeDossier "1" *-- "1" Builder
ConnecteurDB ..|> Builder
Dossier .. Builder


@enduml